Change the Font size and margin of the Unlink Icon to avoid the overlapping of the icon in the Name of officer

--- a/src/app/views/dosri/bankofficer/bankofficer.component.scss
+++ b/src/app/views/dosri/bankofficer/bankofficer.component.scss
@@ -55,8 +55,8 @@
 // }
 
 .add-button {
-    padding: 3px;
-    font-size: 10px;
+    padding: 0;
+    font-size: 23px;
     right: 2px;
     top: 2px;
     position: absolute;
@@ -101,6 +101,8 @@
 .mat-column-Spouse, .mat-column-Children, .mat-column-MotherinLaw, .mat-column-FatherinLaw {
    width: 11%;
    position: relative;
+   padding: 20px;
+   white-space: nowrap;
    // display: flex;
    text-align: left;
    border-left: 1px solid #d3d3d3;
